fix alignment issue, center the page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,7 +45,6 @@ body {
     background-color: var(--white);
     color: var(--dark);
     font-family: var(--font);
-    margin: auto;
 }
 
 a,
@@ -204,8 +203,9 @@ header {
 header {
     background-color: var(--white);
     grid-template-rows: repeat(2, 1fr);
-    row-gap: 1rem;
+    row-gap: var(--space);
     padding-top: var(--space);
+    margin-bottom: calc(var(--space) + 0.5rem);
 }
 
 nav {
@@ -218,7 +218,6 @@ nav {
     display: flex;
     text-transform: uppercase;
     justify-content: space-between;
-    padding-bottom: var(--space);
 }
 
 /* Layout styles */
@@ -227,12 +226,12 @@ nav {
     min-height: 100vh;
     min-height: 100svh;
     max-width: 1100px;
-    margin: auto;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
     row-gap: var(--layoutSpace);
-    margin: 0 calc(var(--space) * 0.5);
+    padding: 0 calc(var(--space) * 0.5);
+    margin: auto;
 }
 
 .container {
@@ -420,3 +419,19 @@ figcaption,
 
 @media screen and (min-width: 1200px) {
 }
+
+/* media queries for hover effects on non-hover devices */
+
+/* this is all the hover stuff */
+/* @media (hover: hover) { */
+/* all of the extra hover states */
+/* Kevin's approach: write css without hover, make it all work, then add all hover stuff in this media query */
+/* } */
+
+/* targets only devices whose primary input isn't a cursor */
+/* @media (hover: none) { */
+/* base styles, make sure that information is conveyed without hovered states */
+/* } */
+
+/* screen orientation media queries */
+/* @media (width <=500) or (orientation: landscape) {}*/
